# hatchling-autoextras-hook

./: Makefile  README.md  pyproject.toml  tasks.py
.github/: CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: build.yaml  coverage.yaml  doctest.yaml  test.yaml
dev/: generate_versions.py
src/hatchling_autoextras_hook/: __init__.py  hooks.py
tests/: test_hooks.py
tests/integration/: test_hooks.py
tests/unit/: test_hooks.py
